[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RecalculateEventMaps"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Tools to generate data suitable for loading into Fragalysis"
dependencies = [
    'pandda_gemmi@git+https://github.com/xchem/PanDDA2.git'
] 
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pipdeptree",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pylint",
    "pytest-cov",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-direct",
    "types-mock",
]

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.pylint.'MESSAGES CONTROL']
disable = """
    c-extension-no-member,
    consider-using-f-string,
    import-error,
    invalid-name,
    line-too-long,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    R,
    W,
    too-many-lines,
"""

[tool.isort]
float_to_top = true
profile = "black"


[tool.flake8]
extend-ignore = [
    "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
    "F811", # support typing.overload decorator
    "F722", # allow Annotated[typ, some_func("some string")]
]
max-line-length = 119 # Respect black's line length (default 88),
exclude = [".tox", "venv"]


[tool.black]
line-length = 119

[tool.pytest.ini_options]
testpaths = ['tests']
 